syntax = "proto3";
option go_package = "github.com/fanyang89/easyvirt/v1/domain";

message Void {}

message DomainID {
  uint32 id = 1;
  string name = 2;
  string uuid = 3;
}

enum DiskDeviceType {
  DISK_DEVICE_TYPE_DISK = 0;
  DISK_DEVICE_TYPE_CDROM = 1;
}

message DiskDescriptor {
  DiskDeviceType device_type = 1; 
  string driver_type = 2; // raw, qcow2
  string file_path = 3;
  string device_name = 4;
  string bus = 5;
  bool read_only = 6;
}

message NicDescriptor {}

message VncDescriptor {}

message VideoCardDescriptor {}

message VM {
  DomainID domain_id = 1;
  uint64 vcpu_count = 2;
  uint64 memory = 3;

  repeated string boot_devices = 9;
  repeated DiskDescriptor disk_list = 10;
  repeated NicDescriptor nic_list = 11;
  repeated VncDescriptor vnc_list = 14;
  repeated VideoCardDescriptor video_card_list = 15;
}

message CreateVMRequest {
  VM vm = 1;
}

message GetVMRequest {
  DomainID domain = 1;
}

message GetVMResponse {
  VM vm = 1;
}

message ListVMsRequest {
  bool active = 1;
  bool inactive = 2;
  bool all = 3;
}

message ListVMsResponse {
  repeated VM vms = 1;
}

message StartVMRequest {
  DomainID domain = 1;
}

message StopVMRequest {
  DomainID domain = 1;
  bool force = 2;// destory domain or not
}

message RestartVMRequest {
  DomainID domain = 1;
  bool force = 2;
}

message PauseVMRequest {
  DomainID domain = 1;
}

message ResumeVMRequest {
  DomainID domain = 1;
}

message DeleteVMRequest {
  DomainID domain = 1;
  bool delete_disks = 2;
}

message UpdateVMRequest {
  DomainID domain = 1;
}

service EasyVirt {
  // domain CRUD
  rpc CreateVM(CreateVMRequest) returns (Void) {}
  rpc DeleteVM(DeleteVMRequest) returns (Void) {}
  rpc UpdateVM(UpdateVMRequest) returns (Void) {}
  rpc GetVM(GetVMRequest) returns (GetVMResponse) {}
  rpc ListVMs(ListVMsRequest) returns (ListVMsResponse) {}

  // operations
  rpc StartVM(StartVMRequest) returns (Void) {}
  rpc StopVM(StopVMRequest) returns (Void) {}
  rpc RestartVM(RestartVMRequest) returns (Void) {}
  rpc SuspendVM(PauseVMRequest) returns (Void) {}
  rpc ResumeVM(ResumeVMRequest) returns (Void) {}
}
